examples/test/testpolicy6611.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6611
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key23: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value12
          key2: value4
          key16: value1
      podSelector:
        matchLabels:
          key16: value3
          key37: value42
          key31: value44
